# llm-games-evals

./: .gitignore  README.md  env.py  game.py  pyproject.toml
game/: env.py  eval.py  game.py  player.py  system_prompt.py  test_llm.py  test_stockfish.py  types.py  util.py
game/players/: llm_player.py  stockfish_player.py
notebooks/: Analysis.ipynb
