[tool.poetry]
name = "llm-games"
version = "0.1.0"
description = ""
authors = ["George Prichard <dgmprichard@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
chess = "^1.11.1"
stockfish = "^3.28.0"
pydantic = "^2.10.1"
pydantic-settings = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
